gen/javipyGrammarParser.py
# Generated from ..//Desktop//javipy//javipyGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class javipyGrammarParser ( Parser ):

    grammarFileName = "javipyGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'void'", "'int'", "'float'", "'String'", 
                     "'boolean'", "'class'", "'enum'", "'public'", "'private'", 
                     "'protected'", "'static'", "'new'", "'for'", "'if'", 
                     "'else'", "'while'", "'break'", "'switch'", "'case'", 
                     "'default'", "'continue'", "'return'", "'try'", "'catch'", 
                     "'import'", "'System.out.print'", "'System.out.println'", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'||'", "'&&'", "'!'", 
                     "'++'", "'--'", "';'", "':'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "','", "'.'", "<INVALID>", "<INVALID>", 
                     "'this'", "'null'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "VOID", "INT", "FLOAT", "STRING", "BOOLEAN", 
                      "CLASS", "ENUM", "PUBLIC", "PRIVATE", "PROTECTED", 
                      "STATIC", "NEW", "FOR", "IF", "ELSE", "WHILE", "BREAK", 
                      "SWITCH", "CASE", "DEFAULT", "CONTINUE", "RETURN", 
                      "TRY", "CATCH", "IMPORT", "PRINT", "PRINTLN", "PLUS", 
                      "MINUS", "MULTIPLY", "DIVIDE", "ASSIGN", "EQUAL", 
                      "NOTEQUAL", "LESSTHAN", "LESSOREQ", "MORETHAN", "MOREOREQ", 
                      "OR", "AND", "NOT", "INCREMENT", "DECREMENT", "SEMICOLON", 
                      "COLON", "LEFTPAREN", "RIGHTPAREN", "LEFTBRACKET", 
                      "RIGHTBRACKET", "LEFTBRACE", "RIGHTBRACE", "COMMA", 
                      "DOT", "NUMBER", "TEXT", "THIS", "NULL", "TRUE", "FALSE", 
                      "IDENTIFIER", "COMMENT", "WHITESPACE" ]

    RULE_program = 0
    RULE_import_statement = 1
    RULE_declaration = 2
    RULE_enum_declaration = 3
    RULE_enum_body = 4
    RULE_class_declaration = 5
    RULE_class_body = 6
    RULE_field_declaration = 7
    RULE_method_declaration = 8
    RULE_constructor = 9
    RULE_access = 10
    RULE_data_type = 11
    RULE_type = 12
    RULE_literal = 13
    RULE_parameter_list = 14
    RULE_parameter = 15
    RULE_argument_list = 16
    RULE_argument = 17
    RULE_block = 18
    RULE_statement = 19
    RULE_block_statement = 20
    RULE_local_variable = 21
    RULE_assignment = 22
    RULE_class_object = 23
    RULE_enum_object = 24
    RULE_expression = 25
    RULE_logical_expression = 26
    RULE_logical_term = 27
    RULE_logical_operator = 28
    RULE_arithmetic_expression = 29
    RULE_arithmetic_term = 30
    RULE_arithmetic_operator = 31
    RULE_compare_operator = 32
    RULE_if_statement = 33
    RULE_else_statement = 34
    RULE_switch_case_statement = 35
    RULE_switch_block = 36
    RULE_switch_case = 37
    RULE_default_case = 38
    RULE_loop_statement = 39
    RULE_for_statement = 40
    RULE_for_condition = 41
    RULE_for_iteration = 42
    RULE_while_statement = 43
    RULE_while_condition = 44
    RULE_try_catch_statement = 45
    RULE_catch_statement = 46
    RULE_print_statement = 47
    RULE_print_term = 48
    RULE_return_statement = 49
    RULE_break_statement = 50
    RULE_continue_statement = 51
    RULE_function_call = 52

    ruleNames =  [ "program", "import_statement", "declaration", "enum_declaration", 
                   "enum_body", "class_declaration", "class_body", "field_declaration", 
                   "method_declaration", "constructor", "access", "data_type", 
                   "type", "literal", "parameter_list", "parameter", "argument_list", 
                   "argument", "block", "statement", "block_statement", 
                   "local_variable", "assignment", "class_object", "enum_object", 
                   "expression", "logical_expression", "logical_term", "logical_operator", 
                   "arithmetic_expression", "arithmetic_term", "arithmetic_operator", 
                   "compare_operator", "if_statement", "else_statement", 
                   "switch_case_statement", "switch_block", "switch_case", 
                   "default_case", "loop_statement", "for_statement", "for_condition", 
                   "for_iteration", "while_statement", "while_condition", 
                   "try_catch_statement", "catch_statement", "print_statement", 
                   "print_term", "return_statement", "break_statement", 
                   "continue_statement", "function_call" ]

    EOF = Token.EOF
    VOID=1
    INT=2
    FLOAT=3
    STRING=4
    BOOLEAN=5
    CLASS=6
    ENUM=7
    PUBLIC=8
    PRIVATE=9
    PROTECTED=10
    STATIC=11
    NEW=12
    FOR=13
    IF=14
    ELSE=15
    WHILE=16
    BREAK=17
    SWITCH=18
    CASE=19
    DEFAULT=20
    CONTINUE=21
    RETURN=22
    TRY=23
    CATCH=24
    IMPORT=25
    PRINT=26
    PRINTLN=27
    PLUS=28
    MINUS=29
    MULTIPLY=30
    DIVIDE=31
    ASSIGN=32
    EQUAL=33
    NOTEQUAL=34
    LESSTHAN=35
    LESSOREQ=36
    MORETHAN=37
    MOREOREQ=38
    OR=39
    AND=40
    NOT=41
    INCREMENT=42
    DECREMENT=43
    SEMICOLON=44
    COLON=45
    LEFTPAREN=46
    RIGHTPAREN=47
    LEFTBRACKET=48
    RIGHTBRACKET=49
    LEFTBRACE=50
    RIGHTBRACE=51
    COMMA=52
    DOT=53
    NUMBER=54
    TEXT=55
    THIS=56
    NULL=57
    TRUE=58
    FALSE=59
    IDENTIFIER=60
    COMMENT=61
    WHITESPACE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javipyGrammarParser.Import_statementContext)
            else:
                return self.getTypedRuleContext(javipyGrammarParser.Import_statementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javipyGrammarParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(javipyGrammarParser.DeclarationContext,i)


        def getRuleIndex(self):
            return javipyGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = javipyGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 106
                self.import_statement()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 112
                self.declaration()
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1984) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(javipyGrammarParser.IMPORT, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(javipyGrammarParser.IDENTIFIER)
            else:
                return self.getToken(javipyGrammarParser.IDENTIFIER, i)

        def SEMICOLON(self):
            return self.getToken(javipyGrammarParser.SEMICOLON, 0)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(javipyGrammarParser.DOT)
            else:
                return self.getToken(javipyGrammarParser.DOT, i)

        def getRuleIndex(self):
            return javipyGrammarParser.RULE_import_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_statement" ):
                listener.enterImport_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_statement" ):
                listener.exitImport_statement(self)




    def import_statement(self):

        localctx = javipyGrammarParser.Import_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(javipyGrammarParser.IMPORT)
            self.state = 118
            self.match(javipyGrammarParser.IDENTIFIER)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==53:
                self.state = 119
                self.match(javipyGrammarParser.DOT)
                self.state = 120
                self.match(javipyGrammarParser.IDENTIFIER)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(javipyGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declaration(self):
            return self.getTypedRuleContext(javipyGrammarParser.Class_declarationContext,0)


        def enum_declaration(self):
            return self.getTypedRuleContext(javipyGrammarParser.Enum_declarationContext,0)


        def access(self):
            return self.getTypedRuleContext(javipyGrammarParser.AccessContext,0)


        def getRuleIndex(self):
            return javipyGrammarParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = javipyGrammarParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0):
                self.state = 128
                self.access()


            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.state = 131
                self.class_declaration()
                pass
            elif token in [7]:
                self.state = 132
                self.enum_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(javipyGrammarParser.ENUM, 0)

        def IDENTIFIER(self):
            return self.getToken(javipyGrammarParser.IDENTIFIER, 0)

        def LEFTBRACE(self):
            return self.getToken(javipyGrammarParser.LEFTBRACE, 0)

        def enum_body(self):
            return self.getTypedRuleContext(javipyGrammarParser.Enum_bodyContext,0)


        def RIGHTBRACE(self):
            return self.getToken(javipyGrammarParser.RIGHTBRACE, 0)

        def getRuleIndex(self):
            return javipyGrammarParser.RULE_enum_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_declaration" ):
                listener.enterEnum_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_declaration" ):
                listener.exitEnum_declaration(self)




    def enum_declaration(self):

        localctx = javipyGrammarParser.Enum_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_enum_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(javipyGrammarParser.ENUM)
            self.state = 136
            self.match(javipyGrammarParser.IDENTIFIER)
            self.state = 137
            self.match(javipyGrammarParser.LEFTBRACE)
            self.state = 138
            self.enum_body()
            self.state = 139
            self.match(javipyGrammarParser.RIGHTBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(javipyGrammarParser.IDENTIFIER)
            else:
                return self.getToken(javipyGrammarParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(javipyGrammarParser.COMMA)
            else:
                return self.getToken(javipyGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return javipyGrammarParser.RULE_enum_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_body" ):
                listener.enterEnum_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_body" ):
                listener.exitEnum_body(self)




    def enum_body(self):

        localctx = javipyGrammarParser.Enum_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enum_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(javipyGrammarParser.IDENTIFIER)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==52:
                self.state = 142
                self.match(javipyGrammarParser.COMMA)
                self.state = 143
                self.match(javipyGrammarParser.IDENTIFIER)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(javipyGrammarParser.CLASS, 0)

        def IDENTIFIER(self):
            return self.getToken(javipyGrammarParser.IDENTIFIER, 0)

        def LEFTBRACE(self):
            return self.getToken(javipyGrammarParser.LEFTBRACE, 0)

        def class_body(self):
            return self.getTypedRuleContext(javipyGrammarParser.Class_bodyContext,0)


        def RIGHTBRACE(self):
            return self.getToken(javipyGrammarParser.RIGHTBRACE, 0)

        def getRuleIndex(self):
            return javipyGrammarParser.RULE_class_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration" ):
                listener.enterClass_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration" ):
                listener.exitClass_declaration(self)




    def class_declaration(self):

        localctx = javipyGrammarParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(javipyGrammarParser.CLASS)
            self.state = 150
            self.match(javipyGrammarParser.IDENTIFIER)
            self.state = 151
            self.match(javipyGrammarParser.LEFTBRACE)
            self.state = 152
            self.class_body()
            self.state = 153
            self.match(javipyGrammarParser.RIGHTBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javipyGrammarParser.Field_declarationContext)
            else:
                return self.getTypedRuleContext(javipyGrammarParser.Field_declarationContext,i)


        def method_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javipyGrammarParser.Method_declarationContext)
            else:
                return self.getTypedRuleContext(javipyGrammarParser.Method_declarationContext,i)


        def constructor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javipyGrammarParser.ConstructorContext)
            else:
                return self.getTypedRuleContext(javipyGrammarParser.ConstructorContext,i)


        def enum_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(javipyGrammarParser.Enum_declarationContext)
            else:
                return self.getTypedRuleContext(javipyGrammarParser.Enum_declarationContext,i)


        def getRuleIndex(self):
            return javipyGrammarParser.RULE_class_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_body" ):
                listener.enterClass_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_body" ):
                listener.exitClass_body(self)




    def class_body(self):

        localctx = javipyGrammarParser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152921504606851006) != 0):
                self.state = 159
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 155
                    self.field_declaration()
                    pass

                elif la_ == 2:
                    self.state = 156
                    self.method_declaration()
                    pass

                elif la_ == 3:
                    self.state = 157
                    self.constructor()
                    pass

                elif la_ == 4:
                    self.state = 158
                    self.enum_declaration()
                    pass


                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(javipyGrammarParser.Data_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(javipyGrammarParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(javipyGrammarParser.SEMICOLON, 0)

        def access(self):
            return self.getTypedRuleContext(javipyGrammarParser.AccessContext,0)


        def STATIC(self):
            return self.getToken(javipyGrammarParser.STATIC, 0)

        def ASSIGN(self):
            return self.getToken(javipyGrammarParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(javipyGrammarParser.LiteralContext,0)


        def getRuleIndex(self):
            return javipyGrammarParser.RULE_field_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declaration" ):
                listener.enterField_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declaration" ):
                listener.exitField_declaration(self)




    def field_declaration(self):

        localctx = javipyGrammarParser.Field_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_field_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0):
                self.state = 164
                self.access()


            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 167
                self.match(javipyGrammarParser.STATIC)


            self.state = 170
            self.data_type()
            self.state = 171
            self.match(javipyGrammarParser.IDENTIFIER)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 172
                self.match(javipyGrammarParser.ASSIGN)
                self.state = 173
                self.literal()


            self.state = 176
            self.match(javipyGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(javipyGrammarParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(javipyGrammarParser.IDENTIFIER, 0)

        def LEFTPAREN(self):
            return self.getToken(javipyGrammarParser.LEFTPAREN, 0)

        def RIGHTPAREN(self):
            return self.getToken(javipyGrammarParser.RIGHTPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(javipyGrammarParser.BlockContext,0)


        def access(self):
            return self.getTypedRuleContext(javipyGrammarParser.AccessContext,0)


        def STATIC(self):
            return self.getToken(javipyGrammarParser.STATIC, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(javipyGrammarParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return javipyGrammarParser.RULE_method_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declaration" ):
                listener.enterMethod_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declaration" ):
                listener.exitMethod_declaration(self)




    def method_declaration(self):

        localctx = javipyGrammarParser.Method_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0):
                self.state = 178
                self.access()


            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 181
                self.match(javipyGrammarParser.STATIC)


            self.state = 184
            self.type_()
            self.state = 185
            self.match(javipyGrammarParser.IDENTIFIER)
            self.state = 186
            self.match(javipyGrammarParser.LEFTPAREN)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152921504606847036) != 0):
                self.state = 187
                self.parameter_list()


            self.state = 190
            self.match(javipyGrammarParser.RIGHTPAREN)
            self.state = 191
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(javipyGrammarParser.IDENTIFIER, 0)

        def LEFTPAREN(self):
            return self.getToken(javipyGrammarParser.LEFTPAREN, 0)

        def RIGHTPAREN(self):
            return self.getToken(javipyGrammarParser.RIGHTPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(javipyGrammarParser.BlockContext,0)


        def access(self):
            return self.getTypedRuleContext(javipyGrammarParser.AccessContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(javipyGrammarParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return javipyGrammarParser.RULE_constructor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructor" ):
                listener.enterConstructor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructor" ):
                listener.exitConstructor(self)




    def constructor(self):

        localctx = javipyGrammarParser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0):
                self.state = 193
                self.access()


            self.state = 196
            self.match(javipyGrammarParser.IDENTIFIER)
            self.state = 197
            self.match(javipyGrammarParser.LEFTPAREN)
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152921504606847036) != 0):
                self.state = 198
                self.parameter_list()


            self.state = 201
            self.match(javipyGrammarParser.RIGHTPAREN)
            self.state = 202
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessContext(ParserRuleContext):
        __slots__ = 'parser'

